cmake_minimum_required(VERSION 3.10)

project(GUI)

set(CMAKE_CXX_STANDARD 23)

add_subdirectory(GUIDialogBox)
add_subdirectory(GUIBox)
add_subdirectory(GUIButton)
add_subdirectory(GUICircleSegment)
add_subdirectory(GUIEnergyBar)
add_subdirectory(GUIQuickMenu)
add_subdirectory(GUIExpInfo)
add_subdirectory(GUIJournal)
add_subdirectory(GUIMinimap)
add_subdirectory(GUIStar)
add_subdirectory(GUIWeaponTile)
add_subdirectory(GUISkill)
add_subdirectory(GUIScenes)