cmake_minimum_required(VERSION 3.0)

project (Managers)

set(CMAKE_CXX_STANDARD 23)

add_subdirectory(EventManager)
add_subdirectory(FontManager)
add_subdirectory(SceneManager)
add_subdirectory(SoundManager)
add_subdirectory(TextureManager)
add_subdirectory(BackgroundManager)
add_subdirectory(SkillManager)