cmake_minimum_required(VERSION 3.10)

project(Systems)

set(CMAKE_CXX_STANDARD 23)

add_subdirectory(PointSystem)
add_subdirectory(QuestSystem)
add_subdirectory(NotifySystem)
add_subdirectory(CooldownSystem)
add_subdirectory(ProceduralGenerationSystem)
add_subdirectory(AccelerationSystem)
add_subdirectory(BulletSystem)
add_subdirectory(CameraSystem)
add_subdirectory(CollisionSystem)
add_subdirectory(DropSystem)
add_subdirectory(EnemyInitializationSystem)
add_subdirectory(ExperienceSystem)
add_subdirectory(PlayerInitializationSystem)
add_subdirectory(SkillSystem)
add_subdirectory(WeaponSystem)
add_subdirectory(ShieldSystem)
add_subdirectory(EnergySystem)
add_subdirectory(DebugSystem)
add_subdirectory(EntityStateSystem)
add_subdirectory(HealthSystem)
add_subdirectory(InfoSystem)
add_subdirectory(InputSystem)
add_subdirectory(MoneySystem)
add_subdirectory(MovementSystem)
add_subdirectory(MusicSystem)
add_subdirectory(RemovalSystem)
add_subdirectory(RenderSystem)
add_subdirectory(RotateTowardsMouseSystem)
add_subdirectory(ShootingSystem)
add_subdirectory(StoneSystem)
add_subdirectory(TimeControlSystem)
add_subdirectory(WaypointsMovementSystem)
add_subdirectory(ParticleSystem)
add_subdirectory(EnemyGroupSystem)